--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 1em ;
-    overflow: hidden;
+    /*overflow: hidden;*/
     /*background-color: black ;*/
     font-family: Helvetica, sans-serif;
     font-size: 1.5em;
